--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <article class="card-wrapper">
-      <section class="card-header"></section>
+      <header class="card-header"></header>
       <div class="card-avatar">
         <img class="avatar" src="./img/avatar.jpg" alt="avatar" />
       </div>
@@ -17,7 +17,7 @@
         <h2 class="name">Adam Jordan</h2>
         <span class="contact">@adamjordan</span>
       </section>
-      <section>
+      <section class="card-about">
         <p class="about">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
           explicabo quas, vitae voluptatem ducimus eveniet asperiores. Ratione
@@ -25,11 +25,17 @@
           minima sit. Assumenda.
         </p>
       </section>
-      <section class="social">
-        <a href="#"><img src="./img/facebook.svg" alt="facebook" /></a>
-        <a href="#"><img src="./img/twitter.svg" alt="twitter" /></a>
-        <a href="#"><img src="./img/linkedin.svg" alt="linked" /></a>
-      </section>
+      <footer class="social">
+        <a class="link" href="#"
+          ><img src="./img/facebook.svg" alt="facebook"
+        /></a>
+        <a class="link" href="#"
+          ><img src="./img/twitter.svg" alt="twitter"
+        /></a>
+        <a class="link" href="#"
+          ><img src="./img/linkedin.svg" alt="linked"
+        /></a>
+      </footer>
     </article>
   </body>
 </html>
