--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           minima sit. Assumenda.
         </p>
       </section>
-      <footer class="social">
+      <section class="social">
         <a class="link" href="#"
           ><img src="./img/facebook.svg" alt="facebook"
         /></a>
@@ -35,7 +35,7 @@
         <a class="link" href="#"
           ><img src="./img/linkedin.svg" alt="linked"
         /></a>
-      </footer>
+      </section>
     </article>
   </body>
 </html>
