--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </p>
       </section>
       <section class="social">
-        <a class="link" href="#"
+        <a class="link" href="https://uk-ua.facebook.com/"
           ><img src="./img/facebook.svg" alt="facebook"
         /></a>
-        <a class="link" href="#"
+        <a class="link" href="https://twitter.com/?lang=ru"
           ><img src="./img/twitter.svg" alt="twitter"
         /></a>
-        <a class="link" href="#"
+        <a class="link" href="https://ru.linkedin.com/"
           ><img src="./img/linkedin.svg" alt="linked"
         /></a>
       </section>
