--- a/index.html
+++ b/index.html
@@ -10,31 +10,33 @@
   <body>
     <article class="card-wrapper">
       <header class="card-header"></header>
-      <div class="card-avatar">
-        <img class="avatar" src="./img/avatar.jpg" alt="avatar" />
-      </div>
-      <section class="name-contact">
-        <h2 class="name">Adam Jordan</h2>
-        <span class="contact">@adamjordan</span>
-      </section>
-      <section class="card-about">
-        <p class="about">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
-          explicabo quas, vitae voluptatem ducimus eveniet asperiores. Ratione
-          repellendus quia, sint illo dicta, et molestiae ullam neque, iusto
-          minima sit. Assumenda.
-        </p>
-      </section>
-      <section class="social">
-        <a class="link" href="https://uk-ua.facebook.com/"
-          ><img src="./img/facebook.svg" alt="facebook"
-        /></a>
-        <a class="link" href="https://twitter.com/?lang=ru"
-          ><img src="./img/twitter.svg" alt="twitter"
-        /></a>
-        <a class="link" href="https://ru.linkedin.com/"
-          ><img src="./img/linkedin.svg" alt="linked"
-        /></a>
+      <section class="card-content">
+        <div class="card-avatar">
+          <img class="avatar" src="./img/avatar.jpg" alt="avatar" />
+        </div>
+        <section class="name-contact">
+          <h2 class="name">Adam Jordan</h2>
+          <span class="contact">@adamjordan</span>
+        </section>
+        <section class="card-about">
+          <p class="about">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque
+            explicabo quas, vitae voluptatem ducimus eveniet asperiores. Ratione
+            repellendus quia, sint illo dicta, et molestiae ullam neque, iusto
+            minima sit. Assumenda.
+          </p>
+        </section>
+        <section class="social">
+          <a class="link" href="https://uk-ua.facebook.com/"
+            ><img src="./img/facebook.svg" alt="facebook"
+          /></a>
+          <a class="link" href="https://twitter.com/?lang=ru"
+            ><img src="./img/twitter.svg" alt="twitter"
+          /></a>
+          <a class="link" href="https://ru.linkedin.com/"
+            ><img src="./img/linkedin.svg" alt="linked"
+          /></a>
+        </section>
       </section>
     </article>
   </body>
